--- a/requirements.txt
+++ b/requirements.txt
@@ -42,7 +42,7 @@ fastapi==0.116.1
 fastapi-cli==0.0.8
 fastapi-cloud-cli==0.1.5
 Flask==3.1.2
-frozenlist==1.7.0
+frozenlist
 fsspec==2025.7.0
 googleapis-common-protos==1.70.0
 greenlet==3.2.4
