--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,12 @@ airflow-triggerer.pid
 scraped_data/
 .scraped_data/
 /scraped_data/*
+
+.scrapy/
+*.pyc
+__pycache__/
+*.log
+*.egg-info/
+*.egg
+dist/
+build/
