--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,11 @@ airflow-triggerer.pid
 scraped_data/
 .scraped_data/
 /scraped_data/*
+
+# Credentials and secrets
+credentials/
+*.json
+!package*.json
+.env
+*.key
+*.pem
