--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,6 @@ scrapers/appleme/scraped_data/appleme_products.json
 
 
 .scrapy/
+lifemobile_products.json
+one1lk_products.json
+lifemobile_products.json
