--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ apache-airflow-providers-common-sql==1.27.5
 apache-airflow-providers-smtp==2.2.0
 apache-airflow-providers-standard==1.6.0
 apache-airflow-task-sdk==1.0.4
+apache-airflow-providers-celery>=3.3.0
 argcomplete==3.6.2
 asgiref==3.9.1
 asyncio==3.4.3
