--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -81,6 +81,9 @@ x-airflow-common: &airflow-common
     - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins
     - ${AIRFLOW_PROJ_DIR:-.}/scrapers:/opt/airflow/scrapers
     - ${AIRFLOW_PROJ_DIR:-.}/store:/opt/airflow/store
+    - ${AIRFLOW_PROJ_DIR:-.}/store:/opt/airflow/store
+    - ${AIRFLOW_PROJ_DIR:-.}/transformations:/opt/airflow/transformations
+    
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on: &airflow-common-depends-on
     redis:
