--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 a2wsgi==1.10.10
+agate==1.9.1
 aiohappyeyeballs==2.6.1
 aiohttp==3.12.15
 aiosignal==1.4.0
@@ -14,14 +15,13 @@ apache-airflow-providers-common-sql==1.27.5
 apache-airflow-providers-smtp==2.2.0
 apache-airflow-providers-standard==1.6.0
 apache-airflow-task-sdk==1.0.4
-apache-airflow-providers-celery>=3.3.0
 argcomplete==3.6.2
 asgiref==3.9.1
 asyncio==3.4.3
 attrs==25.3.0
-Automat==25.4.16
 azure-core==1.35.0
 azure-storage-blob==12.26.0
+babel==2.17.0
 beautifulsoup4==4.13.4
 blinker==1.9.0
 Brotli==1.1.0
@@ -33,53 +33,68 @@ charset-normalizer==3.4.2
 click==8.2.1
 colorama==0.4.6
 colorlog==6.9.0
-constantly==23.10.4
 cron-descriptor==1.4.5
 croniter==6.0.0
 cryptography==45.0.6
-cssselect==1.3.0
--e git+https://github.com/ProductPriceTrackerOrg/data-pipeline.git@b91ba4a0f0ba46b5acd093c4f5c78c26470df76d#egg=data_pipeline
+daff==1.4.2
+-e git+https://github.com/ProductPriceTrackerOrg/data-pipeline.git@44b29102c9217e1d7a9b32daa21bdd38fa81addf#egg=data_pipeline
 DateTime==5.5
-defusedxml==0.7.1
+db-dtypes==1.4.3
+dbt-adapters==1.17.2
+dbt-bigquery==1.10.2
+dbt-common==1.32.0
+dbt-core==1.11.0b2
+dbt-extractor==0.6.0
+dbt-protos==1.0.375
+dbt-semantic-interfaces==0.9.0
+deepdiff==8.6.1
 Deprecated==1.2.18
 dill==0.4.0
 dnspython==2.7.0
+docstring_parser==0.17.0
 email_validator==2.2.0
 fastapi==0.116.1
 fastapi-cli==0.0.8
 fastapi-cloud-cli==0.1.5
-filelock==3.19.1
+fastjsonschema==2.21.2
 Flask==3.1.2
 frozenlist==1.7.0
 fsspec==2025.7.0
 google-api-core==2.25.1
 google-auth==2.40.3
+google-auth-oauthlib==1.2.2
+google-cloud-aiplatform==1.118.0
 google-cloud-bigquery==3.37.0
 google-cloud-core==2.4.3
+google-cloud-dataproc==5.22.0
+google-cloud-resource-manager==1.14.2
+google-cloud-storage==2.19.0
 google-crc32c==1.7.1
+google-genai==1.41.0
 google-resumable-media==2.7.2
 googleapis-common-protos==1.70.0
 greenlet==3.2.4
+grpc-google-iam-v1==0.14.2
 grpcio==1.74.0
 grpcio-status==1.74.0
 gunicorn==23.0.0
 h11==0.16.0
+h2==4.3.0
+hpack==4.1.0
 httpcore==1.0.9
 httptools==0.6.4
 httpx==0.28.1
-hyperlink==21.0.0
+hyperframe==6.1.0
 idna==3.10
 importlib_metadata==8.7.0
-incremental==24.7.2
-isodate==0.7.2
-itemadapter==0.12.2
-itemloaders==1.3.2
+isodate==0.6.1
 itsdangerous==2.2.0
 Jinja2==3.1.6
-jmespath==1.0.1
 jsonschema==4.25.1
 jsonschema-specifications==2025.4.1
+jupyter_core==5.8.1
 lazy-object-proxy==1.12.0
+leather==0.4.0
 libcst==1.8.2
 linkify-it-py==2.0.3
 lockfile==0.12.2
@@ -87,13 +102,18 @@ lxml==6.0.0
 Mako==1.3.10
 markdown-it-py==4.0.0
 MarkupSafe==3.0.2
+mashumaro==3.14
 mdurl==0.1.2
 methodtools==0.4.7
 more-itertools==10.7.0
+msgpack==1.1.1
 msgspec==0.19.0
 multidict==6.6.3
+nbformat==5.10.4
 nest-asyncio==1.5.6
+networkx==3.5
 numpy==2.3.2
+oauthlib==3.3.1
 opentelemetry-api==1.36.0
 opentelemetry-exporter-otlp==1.36.0
 opentelemetry-exporter-otlp-proto-common==1.36.0
@@ -102,52 +122,55 @@ opentelemetry-exporter-otlp-proto-http==1.36.0
 opentelemetry-proto==1.36.0
 opentelemetry-sdk==1.36.0
 opentelemetry-semantic-conventions==0.57b0
+orderly-set==5.5.0
 packaging==25.0
 pandas==2.3.1
-parsel==1.10.0
+pandas-gbq==0.29.2
+parsedatetime==2.6
 pathspec==0.12.1
 pendulum==3.1.0
+platformdirs==4.4.0
 pluggy==1.6.0
 propcache==0.3.2
-Protego==0.5.0
 proto-plus==1.26.1
 protobuf==6.32.0
 psutil==7.0.0
+pyarrow==21.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycparser==2.22
 pydantic==2.11.7
 pydantic_core==2.33.2
-PyDispatcher==2.0.7
+pydata-google-auth==1.9.1
 Pygments==2.19.2
 PyJWT==2.10.1
-pyOpenSSL==25.1.0
 python-daemon==3.1.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-multipart==0.0.20
 python-slugify==8.0.4
+pytimeparse==1.1.8
 pytz==2025.2
+pywin32==311
 PyYAML==6.0.2
-queuelib==1.8.0
 referencing==0.36.2
 requests==2.32.4
-requests-file==2.1.0
+requests-oauthlib==2.0.0
 retryhttp==1.3.3
 rich==14.1.0
 rich-argparse==1.7.1
 rich-toolkit==0.15.0
 rignore==0.6.4
 rpds-py==0.27.0
-Scrapy==2.13.3
 rsa==4.9.1
 selectolax==0.3.17
 sentry-sdk==2.35.0
-service-identity==24.2.0
 setproctitle==1.3.6
+shapely==2.1.2
 shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
+snowplow-tracker==1.1.0
 soupsieve==2.7
 SQLAlchemy==1.4.54
 SQLAlchemy-JSONField==1.0.2
@@ -160,8 +183,7 @@ tabulate==0.9.0
 tenacity==9.1.2
 termcolor==3.1.0
 text-unidecode==1.3
-tldextract==5.3.0
-Twisted==25.5.0
+traitlets==5.14.3
 typer==0.16.1
 types-requests==2.32.4.20250809
 typing-inspection==0.4.1
@@ -172,13 +194,12 @@ universal_pathlib==0.2.6
 urllib3==2.5.0
 uuid6==2025.0.1
 uvicorn==0.35.0
-w3lib==2.3.1
 watchfiles==1.1.0
 websockets==15.0.1
 Werkzeug==3.1.3
 wirerope==1.0.0
 wrapt==1.17.3
+xxhash==3.5.0
 yarl==1.20.1
 zipp==3.23.0
 zope.interface==7.2
-Scrapy==2.13.3
