--- a/requirements.txt
+++ b/requirements.txt
@@ -6,14 +6,6 @@ aiosqlite==0.21.0
 alembic==1.16.4
 annotated-types==0.7.0
 anyio==4.10.0
-apache-airflow==3.0.4
-apache-airflow-core==3.0.4
-apache-airflow-providers-common-compat==1.7.3
-apache-airflow-providers-common-io==1.6.2
-apache-airflow-providers-common-sql==1.27.5
-apache-airflow-providers-smtp==2.2.0
-apache-airflow-providers-standard==1.6.0
-apache-airflow-task-sdk==1.0.4
 argcomplete==3.6.2
 asgiref==3.9.1
 asyncio==3.4.3
@@ -58,7 +50,7 @@ fonttools==4.59.2
 frozenlist==1.7.0
 fsspec==2025.7.0
 google-api-core==2.25.1
-google-auth==2.23.0
+google-auth==2.40.3
 google-cloud-bigquery==3.11.4
 google-cloud-bigquery-storage==2.33.1
 google-cloud-core==2.4.3
@@ -109,14 +101,6 @@ multidict==6.6.3
 nest-asyncio==1.5.6
 networkx==3.5
 numpy==2.3.2
-opentelemetry-api==1.36.0
-opentelemetry-exporter-otlp==1.36.0
-opentelemetry-exporter-otlp-proto-common==1.36.0
-opentelemetry-exporter-otlp-proto-grpc==1.36.0
-opentelemetry-exporter-otlp-proto-http==1.36.0
-opentelemetry-proto==1.36.0
-opentelemetry-sdk==1.36.0
-opentelemetry-semantic-conventions==0.57b0
 outcome==1.3.0.post0
 packaging==25.0
 pandas==2.3.1
@@ -218,7 +202,7 @@ typing_extensions==4.14.1
 tzdata==2025.2
 uc-micro-py==1.0.3
 universal_pathlib==0.2.6
-urllib3==1.26.20
+urllib3
 uuid6==2025.0.1
 uvicorn==0.35.0
 w3lib==2.3.1
