--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -44,10 +44,13 @@
 #
 # Feel free to modify this file to suit your needs.
 ---
-x-airflow-common:
-  &airflow-common # In order to add custom dependencies the image is built locally from the Dockerfile.
-  build: .
-  image: ${AIRFLOW_IMAGE_NAME:-product-price-tracker/airflow:2.9.2-custom}
+x-airflow-common: &airflow-common
+  # In order to add custom dependencies or upgrade provider packages you can use your extended image.
+  # Comment the image line, place your Dockerfile in the directory where you placed the docker-compose.yaml
+  # and uncomment the "build" line below, Then run `docker-compose build` to build the images.
+  image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.9.2}
+  # image: airflow:latest
+  # build: .
   environment: &airflow-common-env
     AIRFLOW__CORE__EXECUTOR: CeleryExecutor
     AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
@@ -66,8 +69,10 @@ x-airflow-common:
     # See https://airflow.apache.org/docs/apache-airflow/stable/administration-and-deployment/logging-monitoring/check-health.html#scheduler-health-check-server
     # yamllint enable rule:line-length
     AIRFLOW__SCHEDULER__ENABLE_HEALTH_CHECK: "true"
-    # _PIP_ADDITIONAL_REQUIREMENTS is intentionally left empty because dependencies are baked into the custom image.
-    _PIP_ADDITIONAL_REQUIREMENTS: ""
+    # WARNING: Use _PIP_ADDITIONAL_REQUIREMENTS option ONLY for a quick checks
+    # for other purpose (development, test and especially production usage) build/extend Airflow image.
+
+    _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-Brotli==1.1.0 aiohttp[speedups] Scrapy nest-asyncio==1.5.6 selectolax==0.3.17 google-cloud-bigquery==3.11.4 google-auth==2.23.0 xxhash httpx[http2]}
 
     # The following line can be used to set a custom config file, stored in the local config folder
     # If you want to use it, outcomment it and replace airflow.cfg with the name of your config file
