--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,6 @@ annotated-types==0.7.0
 anyio==4.10.0
 argcomplete==3.6.2
 asgiref==3.9.1
-asyncio==3.4.3
 attrs==25.3.0
 Automat==25.4.16
 azure-core==1.35.0
@@ -45,7 +44,6 @@ fastapi==0.116.1
 fastapi-cli==0.0.8
 fastapi-cloud-cli==0.1.5
 filelock==3.19.1
-Flask==3.1.2
 fonttools==4.59.2
 frozenlist==1.7.0
 fsspec==2025.7.0
@@ -210,8 +208,7 @@ watchfiles==1.1.0
 webdriver-manager==4.0.2
 websocket-client==1.8.0
 websockets==15.0.1
-Werkzeug==3.1.3
-wirerope==1.0.0
+Werkzeug>=2.3.8,<3.0
 wrapt==1.17.3
 wsproto==1.2.0
 xxhash==3.5.0
