--- a/requirements.txt
+++ b/requirements.txt
@@ -208,7 +208,7 @@ watchfiles==1.1.0
 webdriver-manager==4.0.2
 websocket-client==1.8.0
 websockets==15.0.1
-Werkzeug
+Werkzeug<3.0
 wrapt==1.17.3
 wsproto==1.2.0
 xxhash==3.5.0
